# iDAQdl-CLI

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  iDAQ.py  iDAQcli.py  pyproject.toml  setup.py
src/: iDAQcli.py
tests/: has_logs.html  no_logs.html  test_idaq_comms.py  test_page_parsing.py  testpage.html
