[tool.poetry]
name = "iDAQdl-CLI"
version = "0.1.0"
description = "Python CLI for downloading files from the Wamore iDAQ"
authors = ["sco1 <sco1.git@gmail.com>"]

homepage = "https://github.com/sco1"
repository = "https://github.com/sco1/iDAQdl-CLI"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.6"
pytz = "^2018.9"
click = "^7.0"
tqdm = "^4.30"
requests = "^2.21"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
flake8-bugbear = "^18.8"
flake8-import-order = "^0.18.0"
flake8-tidy-imports = "^1.1"
flake8-todo = "^0.7.0"
flake8-string-format = "^0.2.3"
black = {version = "*", allows-prereleases=true}
pre-commit = {git = "https://github.com/pre-commit/pre-commit.git"}
safety = "^1.8"
dodgy = "^0.1.9"
