[tool.poetry]
name = "iDAQdl-CLI"
version = "1.0.0"
description = "Python CLI for downloading files from the Wamore iDAQ"
authors = ["sco1 <sco1.git@gmail.com>"]

homepage = "https://github.com/sco1"
repository = "https://github.com/sco1/iDAQdl-CLI"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [{include = "src"},]

[tool.poetry.scripts]
idaqdl = "src.iDAQcli:cli"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10"
click = "^8.0"
httpx = "^0.19"
tqdm = "^4.62"
yarl = "^1.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bump2version = "^1.0"
flake8 = "^3.9"
flake8-annotations = "^2.6"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.4"
isort = "^5.9"
mypy = "^0.910"
pep8-naming = "^0.12"
pre-commit = "^2.14"
pytest = "^6.2"
pytest-check = "^1.0"
pytest-cov = "^2.12"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
